--- a/mongodb-panache-quickstart/src/main/resources/application.properties
+++ b/mongodb-panache-quickstart/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 # configure the MongoDB client for a single node cluster on localhost
-quarkus.mongodb.connection-string = mongodb://localhost:27017
+quarkus.mongodb.connection-string = mongodb+srv://pedrito:T3U84XCr7cZnnRp@cluster0.m4ped.mongodb.net/?retryWrites=true&w=majority
 # mandatory if you don't specify the name of the database using @MongoEntity
 quarkus.mongodb.database = persons
